# Cource_work_3_new

./: README.md  pyproject.toml
course_project_3/: data.py  executed_operations.py  format_accounts.py  main.py  message.py
tests/: test_executed_operations.py  test_format_accounts.py  test_format_date.py  test_message.py
